<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graph</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_format">Loading&#8230; (%1$d%%)</string>
    <string name="parsing_functions">Parsing functions&#8230;</string>
    <string name="parsing_functions_format">Parsing functions&#8230; (%1$d%%)</string>
    <string name="title_activity_input">Function input</string>
    <string name="input">Input</string>
    <string name="input_caption">Function</string>
    <string name="y_equals">YN = </string>
    <string name="y_equals_format">Y%1$d = </string>
    <string name="windowsettings">Window settings</string>
    <string name="title_activity_windowsettings">Window settings</string>
    <string name="windowsettings_xmin">Xmin</string>
	<string name="windowsettings_xmax">Xmax</string>
    <string name="windowsettings_ymin">Ymin</string>
	<string name="windowsettings_ymax">Ymax</string>
	    <string name="windowsettings_grid">Grid</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    <string name="windowsettings_auto_calc_ymin_ymax">Autmatically calculate Ymin and Ymax</string>
</resources>